--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body data-barba="wrapper">
   <main data-barba="container" data-barba-namespace="home">
     <h1>Welcome to the home page</h1>
-    <a href="./public/about.html">About Page</a>
+    <a href="/about.html">About Page</a>
   </main>
 
-  <script type="module" src="./src/main.js"></script>
+  <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
