--- a/public/about.html
+++ b/public/about.html
@@ -10,7 +10,7 @@
 <body data-barba="wrapper">
   <main data-barba="container" data-barba-namespace="about">
     <h1>About Us</h1>
-    <a href="../index.html">Back to home</a>
+    <a href="/">Back to home</a>
   </main>
 </body>
 
