--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
 
   <div data-barba="container">
     <div id="icon-container">
-      <img src="images/kraken_engine_icon.png" id="bg-icon" />
+      <img src="/images/kraken_engine_icon.png" id="bg-icon" />
     </div>
 
     <div id="hero-content">
-      <img src="images/kraken-engine-title.png" id="hero-title"/>
+      <img src="/images/kraken-engine-title.png" id="hero-title"/>
       <h1><em>Documentation</em></h1>
       <div class="buttons">
-        <a href="installation.html" class="btn">Installation</a>
+        <a href="/installation.html" class="btn">Installation</a>
         <a href="contribute.html" class="btn">Contribute</a>
       </div>
     </div>
   </div>
-
 </body>
 
 <script type="module" src="src/js/app.js"></script>
