--- a/public/installation.html
+++ b/public/installation.html
@@ -1,23 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Installation</title>
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-  <link href="src/css/app.css" rel="stylesheet">
-</head>
-
-<body data-barba="wrapper" data-barba-namespace="other">
-
-  <div data-barba="container">
-    <h1>Other Page</h1>
-    <a href="/">Back home</a>
+<body data-barba="wrapper">
+  <div data-barba="container" data-barba-namespace="installation" id="installation-page">
+    <h1>Installation</h1>
+    <h2>This is an example to see if this works</h2>
+    <a href="/" class="btn">Back to Home</a>
   </div>
-
 </body>
-
-<script type="module" src="src/js/app.js"></script>
-
-</html>
