--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
   </div>
 </body>
 
-<script type="module" src="src/js/app.js"></script>
+<script type="module" src="/src/js/app.js"></script>
 
 </html>
