--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <img src="/images/kraken-engine-title.png" id="hero-title"/>
       <h1><em>Documentation</em></h1>
       <div class="buttons">
-        <a href="/installation.html" class="btn">Installation</a>
-        <a href="contribute.html" class="btn">Contribute</a>
+        <a href="/views/installation.html" class="btn">Installation</a>
+        <a href="/views/contribute.html" class="btn">Contribute</a>
       </div>
     </div>
   </div>
 </body>
 
-<script type="module" src="/src/js/app.js"></script>
+<script type="module" src="/src/js/main.js"></script>
 
 </html>
